# happy_manipulation

./: README.md
dynamixel_controller/: package.xml  setup.cfg  setup.py
dynamixel_controller/config/: mimi_specification.yaml
dynamixel_controller/dynamixel_controller/: motor_controller.py
dynamixel_controller/launch/: motor_controller.launch.py
happymimi_manipulation2_msgs/: CMakeLists.txt  package.xml
happymimi_manipulation2_msgs/srv/: ArmControl.srv  SetArmPose.srv  StrTrg.srv
